<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.database.model.Asteroid" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/app_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/asteroid_codename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{asteroid.codename}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/asteroid_name"
            style="@style/subtitle" />

        <TextView
            android:id="@+id/asteroid_close_approach_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{asteroid.closeApproachDate}"
            android:textColor="@color/text_grey"
            tools:text="@string/asteroid_approach_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/asteroid_codename" />

        <ImageView
            android:id="@+id/asteroid_status_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_status_normal"
            tools:srcCompat="@drawable/ic_status_normal"
            android:contentDescription="@string/status_normal" />

        <ImageView
            android:id="@+id/asteroid_status_potentially_hazardous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_status_potentially_hazardous"
            tools:srcCompat="@drawable/ic_status_potentially_hazardous"
            android:contentDescription="@string/status_potentially_hazardous" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>